<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">
        
        <menu>
            <group android:id="@+id/sort_group" android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_time"
                    android:title="@string/sort_time"
                    android:checked="true" />
                <item
                    android:id="@+id/action_sort_noise_ascending"
                    android:title="@string/sort_noise_ascending" />
                <item
                    android:id="@+id/action_sort_noise_descending"
                    android:title="@string/sort_noise_descending" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_export_csv"
        android:title="@string/export_csv"
        android:icon="@android:drawable/ic_menu_save"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always"/>
</menu> 